--- a/0514.md
+++ b/0514.md
@@ -5,7 +5,9 @@ webサーバー -> DBサーバー:検索要求
 DBサーバー -> DBサーバー:検索
 DBサーバー -> webサーバー:検索結果送信
 alt 検索成功
-webサーバー ->　ユーザー:検索結果表示
+webサーバー -> ユーザー:検索結果表示
 else 検索結果0
 webサーバー -> ユーザー:検索結果0と表示
+end
+@enduml
 '''
