--- a/0514.md
+++ b/0514.md
@@ -1,4 +1,4 @@
-'''uml
+```uml
 @startuml
 ユーザー -> webサーバー:検索条件送信
 webサーバー -> DBサーバー:検索要求
@@ -10,4 +10,4 @@ else 検索結果0
 webサーバー -> ユーザー:検索結果0と表示
 end
 @enduml
-'''
+```
