--- a/チャット.md
+++ b/チャット.md
@@ -5,7 +5,7 @@
 webサーバー -> DBサーバー:文章書込み要求
 DBサーバー -> DBサーバー:文章書込み
 DBサーバー -> webサーバー:結果送信
-webサーバー -> 送信者ユーザー:結果表示
-webサーバー -> 受信者ユーザー:結果表示
+webサーバー -> 送信者ユーザー:文章表示
+webサーバー -> 受信者ユーザー:表示
 @enduml
 ```
