--- a/画面遷移図.md
+++ b/画面遷移図.md
@@ -10,7 +10,7 @@
 他プロフ -> チャット : チャットボタンを押す
 他プロフ -> 依頼 : 依頼ボタンを押す
 state 依頼{
-[*]　-> 依頼内容入力
+[*]　--> 依頼内容入力
 依頼内容入力 -> 支払い : 支払いボタンを押す
 支払い -> 依頼確定 : 確定ボタンを押す
 依頼確定 -> 掲示板 : 掲示板に戻るボタンを押す
