--- a/画面遷移図.md
+++ b/画面遷移図.md
@@ -1,6 +1,6 @@
 ```uml
 @startuml
-[*] -> 紹介ページ
+[*] -up> 紹介ページ
 紹介ページ -> ログイン : アカウントをお持ちの方ボタンを押す
 ログイン -up-> 掲示板 : ログインボタンを押す
 紹介ページ -> 新規登録 : 初めての方ボタンを押す
