--- a/画面遷移図.md
+++ b/画面遷移図.md
@@ -1,10 +1,12 @@
 ```uml
 @startuml
-[*] -up> 紹介ページ
+state ログイン{
+[*] -> 紹介ページ
 紹介ページ -> ログイン : アカウントをお持ちの方ボタンを押す
 ログイン -up-> 掲示板 : ログインボタンを押す
 紹介ページ -> 新規登録 : 初めての方ボタンを押す
 新規登録 -up-> 掲示板 : 登録ボタンを押す
+}
 掲示板 -> 他プロフ : 掲示板書込み者の名前を押す
 他プロフ -> 掲示板 : 掲示板に戻るボタンを押す
 他プロフ -> チャット : チャットボタンを押す
