--- a/画面遷移図.md
+++ b/画面遷移図.md
@@ -7,7 +7,7 @@ state ログイン{
 紹介ページ -> 新規登録 : 初めての方ボタンを押す
 新規登録 -up-> 掲示板 : 登録ボタンを押す
 }
-掲示板 -> 他プロフ : 掲示板書込み者の名前を押す
+掲示板 -[hidden]> 他プロフ : 掲示板書込み者の名前を押す
 他プロフ -> 掲示板 : 掲示板に戻るボタンを押す
 他プロフ -> チャット : チャットボタンを押す
 他プロフ -down-> 依頼 : 依頼ボタンを押す
