--- a/画面遷移図.md
+++ b/画面遷移図.md
@@ -8,6 +8,7 @@ state ログイン{
 新規登録 -up-> 掲示板 : 登録ボタンを押す
 }
 掲示板 -[hidden]> 他プロフ : 掲示板書込み者の名前を押す
+掲示板 -> 他プロフ : 掲示板書込み者の名前を押す
 他プロフ -> 掲示板 : 掲示板に戻るボタンを押す
 他プロフ -> チャット : チャットボタンを押す
 他プロフ -down-> 依頼 : 依頼ボタンを押す
