--- a/画面遷移表.md
+++ b/画面遷移表.md
@@ -11,5 +11,5 @@
 |自プロフ|-|-|-|掲示板|-|-|自プロフ|-|-|-|依頼品状態確認|
 |依頼内容入力|-|-|-|掲示板|-|-|自プロフ|-|支払い|-|-|-|
 |支払い|-|-|-|掲示板|-|-|自プロフ|-|-|依頼確定|-|
-|依頼確定|-|-|-|掲示板|-|-|自プロフ|-|-|-|-|依頼品状態確認|
+|依頼確定|-|-|-|掲示板|-|-|自プロフ|-|-|-|依頼品状態確認|
 |依頼品状態確認|-|-|-|掲示板|-|-|自プロフ|-|-|-|-|-|
