--- a/画面遷移表.md
+++ b/画面遷移表.md
@@ -2,14 +2,14 @@
 
 |画面／アクション|紹介ページ|新規登録|ログイン|掲示板|他プロフ|チャット|自プロフ|依頼内容入力|支払い|依頼確定|依頼品状態確認|
 |---------------|----------|-------|--------|------|-------|--------|-------|-----------|-------|-------|-------------|
-|紹介ページ|-|新規登録|ログイン|-|-|-|-|-|-|-|-|-|
-|新規登録|-|-|-|掲示板|-|-|-|-|-|-|-|
-|ログイン|-|-|-|掲示板|-|-|-|-|-|-|-|
-|掲示板|-|-|-|掲示板|他プロフ|-|自プロフ||||||
-|他プロフ|-|-|-|掲示板|-|チャット|自プロフ|依頼内容入力|-|-|-|
-|チャット|-|-|-|掲示板|他プロフ|-|自プロフ|-|-|-|-|
-|自プロフ|-|-|-|掲示板|-|-|自プロフ|-|-|-|依頼品状態確認|
-|依頼内容入力|-|-|-|掲示板|-|-|自プロフ|-|支払い|-|-|-|
-|支払い|-|-|-|掲示板|-|-|自プロフ|-|-|依頼確定|-|
-|依頼確定|-|-|-|掲示板|-|-|自プロフ|-|-|-|依頼品状態確認|
-|依頼品状態確認|-|-|-|掲示板|-|-|自プロフ|-|-|-|-|-|
+|  紹介ページ   |     -    |新規登録|ログイン|   -  |   -   |    -    |   -  |      -    |   -   |   -  |      -      |
+|    新規登録   |     -     |   -   |    -   |掲示板|   -   |    -   |   -  |      -    |   -   |   -   |     -       |
+|    ログイン   |     -     |   -   |    -   |掲示板|   -   |    -   |   -  |     -     |   -   |   -   |      -      |
+|    掲示板     |     -     |   -   |    -   |掲示板|他プロフ|    -   |自プロフ|    -    |   -   |   -   |      -      |
+|    他プロフ   |     -     |   -   |    -   |掲示板|   -    |チャット|自プロフ|依頼内容入力|  -  |   -   |      -      |
+|   チャット    |     -     |   -   |    -   |掲示板|他プロフ|    -   |自プロフ|    -    |   -   |    -   |      -      | 
+|    自プロフ   |     -     |   -   |    -   |掲示板|   -   |    -    |自プロフ|    -    |   -   |    -   |依頼品状態確認|
+|  依頼内容入力  |    -     |   -   |    -   |掲示板|   -   |    -    |自プロフ|    -    | 支払い |   -    |     -      |
+|     支払い     |    -     |   -   |    -   |掲示板|   -   |    -    |自プロフ|    -    |   -    |依頼確定|     -      |
+|    依頼確定    |    -    |   -   |    -   |掲示板|   -   |    -     |自プロフ|    -    |   -    |   -    |依頼品状態確認|
+| 依頼品状態確認 |    -     |  -   |    -    |掲示板|   -   |    -    |自プロフ|    -     |   -    |  -    |      -     |
