--- a/トップページ.md
+++ b/トップページ.md
@@ -3,5 +3,5 @@
 ### プロトタイプは以下リンク先
 [プロトタイプ](https://www.figma.com/file/RRZj3Qsf9WyeCy1ILyTpd3/Untitled?node-id=0%3A1)
 *****
-<img src="../img/toppage.png" width="500">
+<img src="/img/toppage.png" width="500">
 *****
