--- a/トップページ.md
+++ b/トップページ.md
@@ -4,4 +4,30 @@
 [プロトタイプ](https://www.figma.com/file/RRZj3Qsf9WyeCy1ILyTpd3/Untitled?node-id=0%3A1)
 *****
 <img src="/img/toppage.png" width="500">
+
 *****
+| ID | 要素 | 内容 |  アクション | イベント | 対応DB |
+|----|------|------|------------|----------|--------|
+|バナー|サイト名表示|------------|----------|--------|
+|ログイン|テキスト画像|-|--------|----------|--------|
+| ID |入力欄|テキスト入力|------------------| 〇     |
+|PASS|入力欄|テキスト入力|------------------| 〇     |
+|ログインボタン|ボタン|クリック|ログイン処理実行|-----|
+|商品検索|テキスト画像|-|-|-|
+|商品名|テキスト画像|-|-|-|
+|商品名|入力欄|テキスト入力|-|〇|
+|カテゴリ|テキスト表示|-|-|-|
+|管楽器|テキスト表示|-|-|-|
+|管楽器|チェックボックス|選択|-|〇|
+|弦楽器|テキスト表示|-|-|-|
+|弦楽器|チェックボックス|選択|-|〇|
+|打楽器|テキスト表示|-|-|-|
+|打楽器|チェックボックス|選択|-|〇|
+|検索|ボタン|クリック|検索処理実行|〇|
+|商品一覧|画像ボタン|クリック|商品一覧へ遷移|〇|
+|カートの中|画像ボタン|クリック|カートの中へ遷移|〇|
+|登録情報|画像ボタン|クリック|登録情報へ遷移|〇|
+|商品一覧|テキスト表示|-|-|〇|
+|商品画像|画像リンク|クリック|商品詳細へ遷移|〇|
+|商品名|テキストリンク|クリック|商品詳細へ遷移|〇|
+|価格|テキスト表示|-|-|〇|
