--- a/画面詳細図.md
+++ b/画面詳細図.md
@@ -3,5 +3,5 @@
 ### プロトタイプは以下リンク先
 [プロトタイプ](https://www.figma.com/file/XoaV6vLRawnJwSnsUmbN33/Untitled?node-id=6%3A42)
 *****
-<img src="../img/ページ紹介.png" wudth="500">
+<img src="../img/ページ紹介.png" width="500">
 *****
