--- a/DB/購入テーブル表.md
+++ b/DB/購入テーブル表.md
@@ -1,5 +1,5 @@
 ### DB
-## 購入テーブル
+## d_purchase
 *****
 |    属性名   |     型    |   PK   |  NN  | FK |AUTO_INCREMENT|DEFAULT|
 |-------------|-----------|-------|------|-----|-------------|--------|
