--- a/DB/購入テーブル詳細.md
+++ b/DB/購入テーブル詳細.md
@@ -1,5 +1,5 @@
 ### DB
-## 購入テーブル
+## dpurchase_detail
 *****
 |    属性名   |     型    |   PK   |  NN  | FK |AUTO_INCREMENT|DEFAULT|
 |-------------|-----------|--------|------|----|-------------|--------|
