--- a/DB/カテゴリーテーブル.md
+++ b/DB/カテゴリーテーブル.md
@@ -1,8 +1,8 @@
 ### DB
 ## m_category
 *****
-|    属性名   |     型     |   PK   |  NN  | FK |AUTO_INCREMENT|DEFAULT|
-|-------------|------------|-------|------|-----|-------------|--------|
-| category_id |   int(11)  |   〇  |   〇 |   - |      〇     |    -   |
-|    name     | varchar(20)|   -   |   〇 |   - |      -      |    -   |
-|   reg_date  |    date    |   -   |   〇 |   - |      -      |    -   |
+|    属性名   |     型     |   PK   |  NN  | FK |AUTO_INCREMENT|DEFAULT|REFERENS|
+|-------------|------------|-------|------|-----|-------------|--------|-------|
+| category_id |   int(11)  |   〇  |   〇 |   - |      〇     |    -   |   〇  |
+|    name     | varchar(20)|   -   |   〇 |   - |      -      |    -   |   -   |
+|   reg_date  |    date    |   -   |   〇 |   - |      -      |    -   |   -   |
